--- a/alpha-bear/bear-web/src/hotelList.html
+++ b/alpha-bear/bear-web/src/hotelList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>债券业务平台</title>
+		<title>酒店查询结果</title>
 	    <link rel="stylesheet" type="text/css" href="./css/base.css">
 	</head>
 
@@ -10,7 +10,7 @@
 		<div style="display:none;" id="div1">
 			<div class="top-bar">
 				<div class="sj-cont-width clearfix">
-					<div class="top-bar-bd-l">债券业务平台</div>
+					<div class="top-bar-bd-l">酒店查询结果</div>
 					<!-- -->
 					<div class="top-bar-bd-r">
 						<div>
@@ -58,7 +58,7 @@
 
 		<div class="dialog-mask"></div>
 		<script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="./js/bondSystemsList.js"></script>
+		<script type="text/javascript" src="./js/hotelList.js"></script>
 	</body>
 
 </html>
