--- a/alpha-bear/bear-web/src/login.html
+++ b/alpha-bear/bear-web/src/login.html
@@ -39,6 +39,6 @@
 	<script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="./js/tripledes.js"></script>
 	<script type="text/javascript" src="./js/mode-ecb-min.js"></script>
-	<script type="text/javascript" src="./js/login.js"></script>
+	<script type="text/javascript" src="./js/login.js?ver=1.1"></script>
 </body>
 </html>
