--- a/alpha-bear/bear-web/src/hotelList.html
+++ b/alpha-bear/bear-web/src/hotelList.html
@@ -49,7 +49,7 @@
 				<table id="BMOMSWEB">
 				</table>
 			</div>
-			<div class="login-footer">债券监管与风险管理系统 版权所有 © 2017 由 上海证券交易所支持</div>
+			<div class="login-footer">酒店查询系统 版权所有 © 2017 由 CIBSB支持</div>
 		</div>
 
 
