--- a/alpha-bear/bear-web/src/login.html
+++ b/alpha-bear/bear-web/src/login.html
@@ -16,7 +16,7 @@
 	<div class="login-main">
 		<div class="login-info clearfix">
 			<div class="login-info-left">
-				<div class="logo-img">债券业务平台</div>
+				<div style="font-size:26px; color:#FFA54F">酒店查询系统</div>
 				<div class="username-field">
 					<label for="username"> <i class="iconfont" title="用户名"></i></label>
 					<input type="text" name="username" id="username" placeholder="请输入用户名"/>
@@ -35,7 +35,7 @@
 			<div style="clear:both;"></div>
 		</div>
 	</div>
-	<div class="login-footer">债券监管与风险管理系统 版权所有 © 2017 由 上海证券交易所支持</div>
+	<div class="login-footer">酒店查询系统 版权所有 © 2017 由 CIBSB支持</div>
 	<script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="./js/tripledes.js"></script>
 	<script type="text/javascript" src="./js/mode-ecb-min.js"></script>
