hotel list page

--- a/alpha-bear/bear-web/src/hotelList.html
+++ b/alpha-bear/bear-web/src/hotelList.html
@@ -38,15 +38,13 @@
 		   
 			</br>		
 			<div class="w3layouts_header_left">
-			    <form method="post" onsubmit = "searchHotel();">
-					<input id="hotelname"  type="search" placeholder="输入酒店名称" required="">
-					<input type="submit" id="search" value="">
-				</form>
+					<input id="hotelname"  type="search" placeholder="输入酒店名称" required="" />
+					<input type="button" onclick="searchHotel();" value="" />
 			</div>
 			
 			</br></br></br>
 
-			<div align="center">
+			<div align="center" style="height:350px">
 				<table id="BMOMSWEB">
 				</table>
 			</div>
